# GameController

./: .classpath  .gitignore  .project  .travis.yml  GameController.ipr  LICENSE  README.md  README.txt  TCM.md  TODOs TCM.txt  build.xml
docu/: shortcuts.txt
examples/c/: RoboCupGameControlData.h  SPLStandardMessage.h
examples/python/: requirements.txt  robocup_game_control_data.py  robocup_game_control_return_data.py  spl_standard_message.py
include/: RoboCupGameControlData.h  SPLCoachMessage.h  SPLStandardMessage.h  robocup_game_control_data.py
nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
nbproject/private/: private.properties
resources/config/: teams.cfg
resources/scene/: Ball2010SPL.rsi2  BallFifa3.rsi3  Balls.rsi2  Colors.rsi2  Field2015SPL.rsi2  FieldColors.rsi2  FieldHSLL.rsi2  FieldHSLM.rsi2  FieldHSLS.rsi2  FieldsSPL.rsi2  K1.rsi3  NaoV4H21.rsi2  TeamComm.ros2
src/analyzer/: GUI.java  Games.java  LogAnalyzer.java  LogInfo.java  LogStatistic.java  MANIFEST.MF  Main.java  Parser.java
src/coloring/: AwtColorConverter.java  ColorConverter.java  InternalColor.java
src/common/: ApplicationLock.java  Log.java  Tools.java  TotalScaleLayout.java
src/controller/: ApplicationLock.java  Clock.java  EventHandler.java  GameController.java  Log.java  MANIFEST.MF  Main.java
src/data/: AdultSize.java  AdvancedData.java  GameType.java  (+27 more)
src/libgamectrl/: CMakeLists.txt  GameCtrl.cpp  README  UdpComm.cpp  UdpComm.h  qiproject.xml
test/: TestGamePreparationData.java  TestPrepTeam.java  TestRules.java  TestTeamLoader.java
(+357 files in other folders)
